bugfix: fully replace file contents